--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -757,6 +757,7 @@ p {
   background-color: #e5e5e5;
   padding-top: 100px;
   padding-bottom: 100px;
+  padding-left: 122px;
   letter-spacing: 0.055em;
 }
 
@@ -764,7 +765,7 @@ p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 100px;
+  gap: 50px;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -778,6 +779,16 @@ p {
   width: 929px;
   text-align: left;
   height: 499px;
+}
+
+.about__vertical-line {
+  height: 200px;
+  width: 1px;
+  background-color: #707070;
+  opacity: 27%;
+  float: right;
+  -ms-flex-item-align: center;
+      align-self: center;
 }
 
 .about__image {
