--- a/assets/scss/sections/_section-about.scss
+++ b/assets/scss/sections/_section-about.scss
@@ -3,16 +3,19 @@
   background-color: $color-gray-light;
   padding-top: 100px;
   padding-bottom: 100px;
+  padding-left: 122px;
   letter-spacing: 0.055em;
+
   
  
   
  
   &__container {
     display: flex;
-    gap: 100px;
+    gap: 50px;
     padding-left: $gap;
     padding-right: $gap;
+    
    
     
   }
@@ -26,11 +29,26 @@
     text-align: left;
     height: 499px;
     
+  
+    
 
 
     
 
   }
+
+  &__vertical-line {
+    height: 200px;
+    width: 1px;
+    background-color: #707070;
+    opacity: 27%;
+    float: right;
+    align-self: center;
+   
+ 
+  }
+
+
   &__image {
     
     display: grid;
