--- a/assets/scss/sections/_section-about.scss
+++ b/assets/scss/sections/_section-about.scss
@@ -1,9 +1,13 @@
 .about {
-  height: 699px;
+  position: relative;
+
+  display: grid;
+
+  min-height: 100vh;
   background-color: $color-gray-light;
   padding-top: 100px;
   padding-bottom: 100px;
-  padding-left: 122px;
+  
   letter-spacing: 0.055em;
 
   
@@ -12,10 +16,15 @@
  
   &__container {
     
-    display: flex;
-    gap: 50px;
+    display: grid;
+    gap: 100px;
+    grid-template-columns: 1fr 271px;
+    height: 100%;
+    max-width: 1340px;
+    margin: auto;
     padding-left: $gap;
     padding-right: $gap;
+   
     
    
     
@@ -26,28 +35,30 @@
   
     flex-direction: row;
     font-size: 1.125em;
-    width: 929px;
+    
     text-align: left;
-    height: 499px;
+    
     
   
-    
+    & p:first-of-type {
+      position: relative;
+     margin-top: -5px;
 
 
-    
+     &::after {
+      position: absolute;
+      right: -50px;
+      top: 0;
+      width: 2px;
+      height: 200px;
+      content: "";
+      background-color: rgba(99, 117, 136, 0.1);
+      z-index: 2;
+      }
+    }
 
   }
 
-  &__vertical-line {
-    height: 200px;
-    width: 1px;
-    background-color: #707070;
-    opacity: 27%;
-    float: right;
-    align-self: center;
-   
- 
-  }
 
 
   &__image {
@@ -55,6 +66,12 @@
     display: grid;
     align-content: center;
     justify-items: center;
+    margin-top: -24px;
+
+    & img {
+      max-width: 100%;
+      max-height: 480px;
+    }
   }
-  }
+}
 
