--- a/assets/scss/sections/_section-form.scss
+++ b/assets/scss/sections/_section-form.scss
@@ -1,8 +1,12 @@
 .form {
-padding-top: $gap * 1.5;
-padding-bottom: $gap * 1.5;
+  margin-top: -24px;
+  padding: 30px 0;
+  
+/*padding-top: -($gap * 1.5);
+padding-bottom: $gap * 1.5;*/
 background-color: $color-primary;
 position: relative;
+
   
   
   &__container
@@ -35,8 +39,7 @@ position: relative;
   }
   
 
-
-  }
+}
   
 input {
   height: 60px;
@@ -46,7 +49,7 @@ input {
   color: $color-light;
   padding-left: $gap;
   border: 2px solid rgba($color-light, 0);
-  border-bottom-color: rgba($color-light, .25)
+  border-bottom-color: rgba($color-light, .25);
   background-color: rgba($color-light, .05);
 
   transition: background-color 0.5s, border-color 0.5s;
