--- a/assets/scss/sections/_section-form.scss
+++ b/assets/scss/sections/_section-form.scss
@@ -1,11 +1,10 @@
 .form {
-  margin-top: -24px;
+  margin-top: -90px;
   padding: 30px 0;
   
-/*padding-top: -($gap * 1.5);
-padding-bottom: $gap * 1.5;*/
-background-color: $color-primary;
-position: relative;
+
+  background-color: $color-primary;
+  position: relative;
 
   
   
@@ -15,6 +14,9 @@ position: relative;
     @extend %container;
     grid-template-columns: repeat(3, 1fr);
     display: grid;
+   
+    max-width: 1340px;
+    
     gap: $gap;
     
  
@@ -23,45 +25,68 @@ position: relative;
         
   }
 
-  &__actions {
-    
-    
-        display: flex;
-
-        justify-content: center;
-        gap: $gap;
-   
-        
-  }
-
   &-item {
     
+    
+    display: flex;
+
+    justify-content: center;
+    
+      &__input {
+        display: block;
+        
+        height: 60px;
+        padding-right: 30px;
+        padding-left: 30px;
+        width: 100%;
+        font-size: 1.125rem;
+        letter-spacing: .15em;
+        
+        border: 2px solid rgba($color-light, 0);
+        border-bottom-color: rgba($color-light, .25);
+        background-color: rgba($color-light, .05);
+
+        transition: background-color 0.5s, border-color 0.5s;
+        
+  
+
+        &:hover {
+          
+          border: 2px solid rgba($color-light, .2);
+          border-bottom-color: $color-light;
+          background-color: rgba($color-light, .15);
+        }
+      }   
   }
-  
+
 
 }
   
-input {
-  height: 60px;
-  width: 100%;
-  font-size: 1.125rem;
-  letter-spacing: .15em;
-  color: $color-light;
-  padding-left: $gap;
-  border: 2px solid rgba($color-light, 0);
-  border-bottom-color: rgba($color-light, .25);
-  background-color: rgba($color-light, .05);
 
-  transition: background-color 0.5s, border-color 0.5s;
-   
-   
-}
 
 .btn--form {
+  
   height: 60px;
-  width: 420.5px;
+  width: 100%;
   color: $color-light;
   border: 2px solid rgba($color-light, 0);
-  border-bottom-color: 2px solid rgba($color-light, .2);
+  border-bottom-color: rgba($color-light, .2);
   background-color: rgba($color-light, .1);
+
+  &:hover {
+    border-color: $color-light;
+    
+  }
+}
+
+::placeholder {
+  font: 100;
+  color: rgba($color-light, .25);
+   
+    
+}
+  
+input:hover::placeholder {
+  color: rgba($color-light, .51);
+  
 }
