--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -6,35 +6,56 @@
   &__container {
     @extend %container;
   }
+
+  &__social {
+    position: relative;
+    display: grid;
+    justify-content: center;
+    margin-bottom: 40px;
+    grid-template-columns: repeat(auto-fit, minmax(50px, max-content));
+
+    & a {
+      display: block;
+      padding: 10px;
+      transition: color 0.5s;
+
+      &:hover {
+        color: $color-accent;
+      }
+    }
+
+    & .fab {
+      font-size: 36px;
+    }
+
+    &::after {
+      position: absolute;
+      bottom: -20px;
+      left: calc(50% - 75px / 2);
+      width: 75px;
+      height: 2px;
+      content: "";
+      background-color: rgba(255, 255, 255, 0.1);
+    }
+  }
+
+  &__copy span:nth-of-type(1) {
+    margin-right: -0.5em;
+    letter-spacing: 0.33em;
+    font-weight: 100;
+  }
+
+  &__copy span:nth-of-type(2) {
+    letter-spacing: 0.05em;
+    color: #e5e5e5;
+    font-weight: 700;
+  }
+
+
 }
-
-.footer__social {
-  position: relative;
-  display: grid;
-  justify-content: center;
-  margin-bottom: 40px;
-  grid-template-columns: repeat(auto-fit, minmax(50px, max-content));
-
-}
-
-.footer__social a {
-  display: block;
-  padding: 10px;
-
-  /*transition: color 0.5s;*/
-}
-
-
-.footer__social .fab {
-  font-size: 36px;
-}
-
 
 .fab {
   font-weight: 400;
-}
-
-.fab {
   font-family: "Font Awesome 5 Brands";
   letter-spacing: normal;
 }
@@ -59,25 +80,4 @@
   content: "\f16e";
 }
 
-.footer__social::after {
-  position: absolute;
-  bottom: -20px;
-  left: calc(50% - 75px / 2);
-  width: 75px;
-  height: 2px;
-  content: "";
-  background-color: rgba(255, 255, 255, 0.1);
-}
 
-
-.footer__copy span:nth-of-type(1) {
-  margin-right: -0.5em;
-  letter-spacing: 0.33em;
-  font-weight: 100;
-}
-
-.footer__copy span:nth-of-type(2) {
-  letter-spacing: 0.05em;
-  color: #e5e5e5;
-  font-weight: 700;
-}
