--- a/assets/scss/sections/_section-about.scss
+++ b/assets/scss/sections/_section-about.scss
@@ -1,13 +1,10 @@
 .about {
   position: relative;
-
   display: grid;
-
   min-height: 100vh;
   background-color: $color-gray-light;
   padding-top: 100px;
   padding-bottom: 100px;
-  
   letter-spacing: 0.055em;
 
   
@@ -15,26 +12,19 @@
   
  
   &__container {
-    
+    @extend %container;
     display: grid;
     gap: 100px;
     grid-template-columns: 1fr 271px;
     height: 100%;
-    max-width: 1340px;
-    margin: auto;
-    padding-left: $gap;
-    padding-right: $gap;
   }
    
     
 
 
   &__content {
-    
-  
     flex-direction: row;
     font-size: 1.125em;
-    
     text-align: left;
     
     & p {
@@ -43,18 +33,17 @@
   
     & p:first-of-type {
       position: relative;
-     margin-top: -5px;
+      margin-top: -5px;
 
 
-     &::after {
-      position: absolute;
-      right: -50px;
-      top: 0;
-      width: 2px;
-      height: 200px;
-      content: "";
-      background-color: rgba(99, 117, 136, 0.1);
-      z-index: 2;
+      &::after {
+        position: absolute;
+        right: -50px;
+        top: 0;
+        width: 2px;
+        height: 200px;
+        content: "";
+        background-color: rgba(99, 117, 136, 0.1);
       }
     }
 
@@ -63,7 +52,6 @@
 
 
   &__image {
-    
     display: grid;
     align-content: center;
     justify-items: center;
