--- a/assets/scss/sections/_section-posts.scss
+++ b/assets/scss/sections/_section-posts.scss
@@ -2,22 +2,15 @@
   padding-top: 100px;
   padding-bottom: 100px;
 
-  
-
-  
-
   &__container  {
     @extend %container;
-    
-    
   }
 
   &__grid {
     display: grid;
     padding-bottom: 20px;
     gap: 20px;
-    grid-template-areas:
-        'p1 p1 p2 p3' 'p4 p5 p6 p6';
+    grid-template-areas: 'p1 p1 p2 p3' 'p4 p5 p6 p6';
     grid-template-columns: repeat(4, 1fr);
   }
   
@@ -25,6 +18,8 @@
   &__actions {
     display: flex;
     justify-content: center;
+
+    
   }
 }
 
@@ -42,36 +37,89 @@
 
 .post-item {
   background-color: $color-gray-superlight;
-}
+  transition: background-color 0.5s;
+  &:hover {
+    background-color: rgba(gray, 0.4);
+    & .post-item__caption h3,
+    & .post-item__caption p {
+      color: $color-primary;
+    }
 
-.post-item__link {
-  display: grid;
-  overflow: hidden;
-  height: 100%;
-  grid-template-rows: 300px 1fr;
-}
+    & .post-item__image img {
+      transform: scale(1.1);
+    }
+  
+  }
 
-.post-item__caption {
-  display: grid;
-  font-family: $font-main;
-  font-size: $font-size;
-  letter-spacing: normal;
-  padding: $gap;
-  align-content: center;
-   
-}
 
-.post-item__caption h3 {
-font-family: $font-header;
-}
 
-.post-item__image {
-  display: flex;
-  overflow: hidden;
-  background-color: $color-primary;
-}
 
-.post-item__image img {
-  width: 100%;
-  object-fit: cover;
+
+
+
+  &__link {
+    display: grid;
+    overflow: hidden;
+    height: 100%;
+    grid-template-rows: 300px 1fr;
+    
+
+  }
+
+  &__caption {
+    display: grid;
+    font-family: $font-main;
+    font-size: $font-size;
+    letter-spacing: normal;
+    padding: $gap;
+    align-content: center;
+    
+    
+
+
+    & a {
+      cursor: pointer;
+      background-color: transparent;
+      
+    }
+
+    & h3 {
+      font-family: $font-header;
+      transition: color 0.5s;
+      /*&:hover {
+        color: $color-primary;
+      }*/
+    }
+
+    & p {
+      transition: color 0.5s;
+      /*&:hover {
+        color: $color-primary;
+        
+      }*/
+    }
+
+    
+  }
+
+  &__image {
+    display: flex;
+    overflow: hidden;
+    background-color: $color-primary;
+    
+
+    & img {
+    width: 100%;
+    
+    object-fit: cover;
+    transition: transform 0.5s;
+
+      /*&:hover {
+        transform: scale(1.1);
+      }*/
+
+      
+    }
+  }
+  
 }
